--- a/app/sass/blocks/main-nav.scss
+++ b/app/sass/blocks/main-nav.scss
@@ -273,6 +273,11 @@
 		max-width: 1150px;
 	}
 
+	// for IE10
+	.main-nav__list--additional{
+		z-index: 5;
+	}
+
 	.main-nav__item--header{
 		order: 3;
 
