--- a/app/sass/blocks/page-footer.scss
+++ b/app/sass/blocks/page-footer.scss
@@ -43,6 +43,9 @@
 	vertical-align: middle;
 
 	margin-right: 28px;
+
+	font-size: 19px;
+	line-height: 18px;
 }
 
 .page-footer__image{
